--- a/views/admin/reports.ejs
+++ b/views/admin/reports.ejs
@@ -5,30 +5,26 @@
             <h5>Nahlášené chyby</h5>
         </div>
     </div>
-    <% for(let card of cards){ %> 
-        <div class="row">
-            <div class="col-sm-2 offset-1"><%- card.pageA %> </div>
-            <div class="col-sm-4">
-                <%- card.pageB %> 
-                <a href="/cards/edit/<%= card._id %>" target="_blank" class="btn btn-sm btn-outline-danger">Upravit kartičku</a>
-                <a href="/cards/report/delete/<%= card._id %>" class="btn btn-sm btn-outline-danger">Smazat report</a>
-            </div>
-            <div class="col-sm-5">
-                <% for(let report of card.factualMistakeReports){ %>
-                    <% if (!report.solved) { %>
-                        <div class="card my-2 p-2 d-flex flex-row justify-content-between align-items-center">
-                            <p class="mb-0"><%= report.reportMsg %></p>
-                            <div>
-                                <p class="mb-2 text-small"><%= report.user %></p>
-                                <a href="/cards/report/solved/<%= card._id %>/<%= report.user %>" class="btn btn-sm btn-outline-danger">Poděkovat a smazat</a>
-                            </div>
-                        </div>
-                    <% } %>  
-                <% } %> 
-            </div>
-        </div>
-    <% } %> 
     <% for(let mistake of mistakes){ %> 
+        <% if(mistake && mistake.card){ %>
+            <div class="row mt-3">
+                <div class="col-sm-2 offset-1"><%- mistake.card.pageA %> </div>
+                <div class="col-sm-4">
+                    <p><%- mistake.card.pageB %></p> 
+                    <a href="/cards/edit/<%= mistake.card._id %>" target="_blank" class="btn btn-sm btn-outline-danger">Upravit kartičku</a>
+                    <a href="/deleteMistakeReport/<%= mistake._id %>" class="btn btn-sm btn-outline-danger">Smazat report</a>
+                </div>
+                <div class="col-sm-5">
+                    <div class="card my-2 p-2 d-flex flex-row justify-content-between align-items-center">
+                        <p class="mb-0"><%= mistake.content %></p>
+                        <div>
+                            <p class="mb-2 text-small"><%= mistake.author %></p>
+                            <a href="/deleteMistakeReport/<%= mistake._id %>?thankUser=true" class="btn btn-sm btn-outline-danger">Poděkovat a smazat</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <% } %>
         <% if(mistake && mistake.question){ %>
             <div class="row mt-3">
                 <div class="col-sm-2 offset-1"><%- mistake.question.question %> </div>
@@ -37,14 +33,14 @@
                     <p><%- mistake.question.wrongAnswers[0] %></p> 
                     <p><%- mistake.question.wrongAnswers[1] %></p> 
                     <a href="/category/<%= mistake.question.category %>/section/<%= mistake.question.section %>/questions/<%= mistake.question._id %>/edit" target="_blank" class="btn btn-sm btn-outline-danger">Upravit otázku</a>
-                    <a href="/category/<%= mistake.question.category %>/section/<%= mistake.question.section %>/questions/<%= mistake.question._id %>/deleteMistakeReport/<%= mistake._id %>" class="btn btn-sm btn-outline-danger">Smazat report</a>
+                    <a href="/deleteMistakeReport/<%= mistake._id %>" class="btn btn-sm btn-outline-danger">Smazat report</a>
                 </div>
                 <div class="col-sm-5">
                     <div class="card my-2 p-2 d-flex flex-row justify-content-between align-items-center">
                         <p class="mb-0"><%= mistake.content %></p>
                         <div>
                             <p class="mb-2 text-small"><%= mistake.author %></p>
-                            <a href="/category/<%= mistake.question.category %>/section/<%= mistake.question.section %>/questions/<%= mistake.question._id %>/deleteMistakeReport/<%= mistake._id %>?thankUser=true" class="btn btn-sm btn-outline-danger">Poděkovat a smazat</a>
+                            <a href="/deleteMistakeReport/<%= mistake._id %>?thankUser=true" class="btn btn-sm btn-outline-danger">Poděkovat a smazat</a>
                         </div>
                     </div>
                 </div>
