--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,7 +26,7 @@
           <% } %>
           <% if (currentUser && currentUser.isEditor) { %>
             <li class="nav-item">
-              <a class="nav-link" href="/admin/listAllReports">Nahlášené chyby</a>
+              <a class="nav-link" href="/admin/mistakes">Nahlášené chyby</a>
             </li>
           <% } %>
         </ul>
