--- a/views/questions/list.ejs
+++ b/views/questions/list.ejs
@@ -6,6 +6,7 @@
             <div>
                 <a href="/category/<%= categoryId %>/section/<%= section._id %>/question/generate" class="btn btn-sm btn-outline-danger" style='min-width:124px' id="generate-ai">Vygenerovat (AI)</a>
                 <a href="/category/<%= categoryId %>/section/<%= section._id %>/question/generateEN" class="btn btn-sm btn-outline-danger" style='min-width:124px' id="generate-ai">Vygenerovat (AI) EN</a>
+                <a href="/<%= section._id %>/questions/connect" class="btn btn-sm btn-outline-danger" style='min-width:124px' id="generate-ai">Propojit s kartičkami (AI)</a>
                 <a href="/category/<%= categoryId %>/section/<%= section._id %>/question/new" class="btn btn-sm btn-danger">Přidat otázku</a>
             </div>
             
