stripe payments try/catch added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -194,6 +194,22 @@
                             </div>
                         </div>
                     <% } %>
+                    <!--
+                    <div class="row">
+                        <div class="col-12 mb-4">
+                            <div class="card border-grey">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-evenly align-items-center">
+                                        <h5 class="text-center mb-0">Generálním partnerem projektu InLege je Advokátní kancelář Novák</h5>
+                                        <div class="d-flex justify-content-evenly align-items-center">
+                                            <img src="/img/icon_highfive.png" class="img-fit-100" style="max-height: 80px;" alt="advokatnovak">
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    -->
 
                     <% if(!currentUser || (currentUser && !currentUser.usedMobileApp)) {%>
                     <div class="row">
@@ -244,6 +260,44 @@
             </div>
         </div>
     </div>
+    
+    <!--
+    <section class="partners">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2 text-center mb-5">
+                    <h1 class="mb-4">Partneři projektu</h1>
+                    <div class="row">
+                        <div class="col-lg-4 mb-3">
+                            <div class="reason">
+                                <div class="d-flex flex-column justify-content-center align-items-center">
+                                    <img src="/img/icon_highfive.png" class="img-fit" style="max-width: 48px" alt="advokatnovak">
+                                    <p class="reason-title mb-0 mt-2">Advokátní kancelář Novák</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-3">
+                            <div class="reason">
+                                <div class="d-flex flex-column justify-content-center align-items-center">
+                                    <img src="/img/icon_highfive.png" class="img-fit" style="max-width: 48px" alt="advokatnovak">
+                                    <p class="reason-title mb-0 mt-2">Advokátní kancelář Holubec</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-3">
+                            <div class="reason">
+                                <div class="d-flex flex-column justify-content-center align-items-center">
+                                    <img src="/img/icon_highfive.png" class="img-fit" style="max-width: 48px" alt="advokatnovak">
+                                    <p class="reason-title mb-0 mt-2">Advokátní kancelář INLEGES</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    -->
 
     <section class="vision-statement">
         <div class="container">
