--- a/views/cards/show30.ejs
+++ b/views/cards/show30.ejs
@@ -145,6 +145,20 @@
                 </div>
               </div>
             </div>
+          <% } else { %>
+            <!--
+            <div class="card border-grey mt-3">
+              <div class="card-body" id="questions-list" style="padding: 0.5rem;padding-left:1rem;overflow: scroll;">
+                <div>
+                  <div class="d-flex flex-column justify-content-evenly align-items-center py-2">
+                    <img src="/img/icon_highfive.png" alt="" style="max-width: 40px;">
+                    <p class="text-center text-smaller mb-0">Advokátní kancelář Novák</p>
+                    <p class="text-center text-small text-muted">podporuje projekt InLege</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            -->
           <% } %>
         </div>
       </div>
