--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -53,7 +53,7 @@
                     <div class="row mt-3">
                         <div class="col-12">
                             <a href="/category/<%= category%>/section/<%= section._id%>/card30/1?mode=unknown" class="btn btn-danger mb-4"><i class="fas fa-redo"></i></a>
-                            <a href="/category/<%= category%>/" class="btn btn-danger mb-4">Zpět na kategorii</a>
+                            <a href="/category/<%= category%>/" class="btn btn-danger mb-4">Zpět na předmět</a>
                         </div>
                     </div>
                 <!--pokud se nejedna o posledni sekci zobrazi se tento kod (odkaz na dalsi balicek)-->
