--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -949,6 +949,45 @@ form .form-control.bordered {
   transition: all 0.3s;
 }
 
+/* ADMIN CATEGORIES */
+.icon-select-container {
+  height: 280px;
+  overflow-y: auto;
+}
+.icon-container {
+  display: inline-block;
+  position: relative;
+}
+.icon-container img {
+  border: 3px solid transparent;
+  cursor: pointer;
+  transition: border-color 0.3s;
+}
+.icon-container input[type="radio"] {
+  display: none;
+}
+.icon-container input[type="radio"]:checked + img {
+  border-color: #1270a2;
+}
+
+.img-thumbnail {
+  max-height: 64px;
+  max-width: 64px;
+}
+
+.img-thumbnail-list {
+  max-height: 60px;
+  max-width: 60px;
+  background: #eeeeee;
+  padding: 8px;
+  border-radius: 50%;
+}
+
+.img-thumbnail-list img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
 @media only screen and (max-width: 1200px) {
   .cards-amount-div {
     flex-direction: column;
