--- a/views/admin/categories.ejs
+++ b/views/admin/categories.ejs
@@ -1,98 +1,86 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container">
     <div class="row">
+        <div class="col-12 text-center">
+            <h2 class="text-center mb-4">Správa předmětů</h2> 
+        </div>
+    </div>
+    <div class="row">
         <div class="col-12 mb-3">
             <div class="d-flex justify-content-between align-items-center">
-                <h5>Správa předmětů</h5>
+                <div></div>
                 <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#modal-category" style="margin-bottom: 5px">Přidat předmět</button>
             </div>
-            
-            <p class="text-muted text-smaller">Na hlavní stránce se zobrazují jen předměty s pořadím 1 a výše, nižší čísla lze užít pro přípravu předmětů před zveřejněním. Odstranit lze pouze předměty, které neobsahují žádné balíčky.</p>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
-            <table class="w-100">
-                <tr>
-                    <th><p>Poř.</p></th>
-                    <th><p>Název předmětu</p></th>
-                    <th><p>Zkratka</p></th>
-                    <th><p>Ikona</p></th>
-                    <th><p>Balíčky</p></th>
-                    <th><p>Kartičky</p></th>
-                    <th><p>Otázky</p></th>
-                    <th><p title="Součet spuštění kartiček všech balíčků v předmětu">Abs. Sp. <br> Kartičky</p></th>
-                    <th><p title="Součet spuštění otáezk všech balíčků v předmětu">Abs. Sp. <br> Otázky</p></th>
-                    <th><p title="Průměrný počet spuštění kartiček v předmětu">Prům. Sp. <br> Kartičky</p></th>
-                    <th><p title="Průměrný počet spuštění otázek v předmětu">Prům. Sp. <br> Otázky</p></th>
-                </tr>
-                <% categories.forEach((cat, i) => { %>
-                    <tr class="admin-category-row">
-                        <th><%= cat.orderNum %></th>
-                        <th><a href="/category/<%= cat.name %>"><%= cat.text %></a></th>
-                        <th><%= cat.name %></th>
-                        <th><%= cat.icon %></th>
-                        <th><%= cat.sections.length %></th>
-                        <th><%= cat.numOfCards %></th>
-                        <th><%= cat.numOfQuestions %></th>
-                        <th><%= cat.countStartedAll %></th>
-                        <th><%= cat.countStartedAllQuestions %></th>
-                        <th><%= cat.countAverage %></th>
-                        <th><%= cat.countAverageQuestions %></th>
-                        <th class="d-flex">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-category-edit<%= i %>"><i class="far fa-edit"></i></a>
-                            <% if (cat.sections.length === 0) { %>
-                                <form action="/category/remove/<%= cat._id %>?_method=DELETE" method="POST">
-                                    <button class="delete-btn"><strong>X</strong></button>
+            <!-- Header Row -->
+            <div class="row font-weight-bold">
+                <div class="col-1 text-center"><p>Poř.</p></div>
+                <div class="col-1 text-center nezobrazovat-na-mobilu"><p>Ikona</p></div>
+                <div class="col-4"><p>Název předmětu</p></div>
+                <div class="col-1 text-center nezobrazovat-na-mobilu"><p>Balíčky</p></div>
+                <div class="col-1 text-center nezobrazovat-na-mobilu"><p>Kartičky</p></div>
+                <div class="col-1 text-center nezobrazovat-na-mobilu"><p>Otázky</p></div>
+                <div class="col-3 text-center"><p>Akce</p></div>
+            </div>
+
+            <% if(categories.length < 1){ %>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-center text-muted my-4">Žádné předměty nebyly nalezeny.</p>
+                    </div>
+                </div>
+            <% } %>
+            
+            <!-- Dynamic Content Rows -->
+            <% categories.forEach((cat, i) => { %>
+                <div class="row align-items-center mb-2 border-grey radius-10 bg-grey">
+                    <div class="col-1 text-center "><%= cat.orderNum %></div>
+                    <div class="col-1 text-center nezobrazovat-na-mobilu">
+                        <div class="img-thumbnail-list my-2">
+                            <img src="/img/<%= cat.icon %>" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-4"><a href="/category/<%= cat.name %>"><%= cat.text %></a></div>
+                    <div class="col-1 text-center nezobrazovat-na-mobilu"><%= cat.sections.length %></div>
+                    <div class="col-1 text-center nezobrazovat-na-mobilu"><%= cat.numOfCards %></div>
+                    <div class="col-1 text-center nezobrazovat-na-mobilu"><%= cat.numOfQuestions %></div>
+                    <div class="col-2 d-flex justify-content-around">
+                        <a href="#" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modal-category-edit<%= i %>"><i class="far fa-edit"></i></a>
+                        <% if (cat.sections.length === 0) { %>
+                            <form action="/category/remove/<%= cat._id %>?_method=DELETE" method="POST">
+                                <button class="btn btn-sm btn-outline-danger"><i class="far fa-trash-alt"></i></button>
+                            </form>
+                        <% } else { %>
+                            <a href="#" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modal-category-delete"><i class="far fa-trash-alt"></i></a>
+                        <% } %>
+                        <form action="/category/move-up/<%= cat._id %>?_method=PUT" method="POST">
+                            <button class="move-up-btn btn btn-sm btn-outline-danger"><i class="fas fa-arrow-up"></i></button>
+                        </form>
+                        <form action="/category/move-down/<%= cat._id %>?_method=PUT" method="POST">
+                            <button class="move-down-btn btn btn-sm btn-outline-danger"><i class="fas fa-arrow-down"></i></button>
+                        </form>
+                        <div class="col-1">
+                            <% if(!cat.isPublished){ %>
+                                <form action="/category/publish/<%= cat._id %>?_method=PUT" method="POST">
+                                    <button class="publish-btn btn btn-sm btn-success">Zveřejnit</button>
+                                </form>
+                            <% } else { %>
+                                <form action="/category/unpublish/<%= cat._id %>?_method=PUT" method="POST">
+                                    <button class="publish-btn btn btn-sm btn-danger">Skrýt</button>
                                 </form>
                             <% } %>
-                        </th>
-                    </tr>
-                <% }) %>
-            </table>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 mt-4">
-            <h5>Balíčky dle počtu spuštění</h5>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <table class="w-100">
-                <tr>
-                    <th><p>Poř.</p></th>
-                    <th><p>Balíček</p></th>
-                    <th><p>Kategorie</p></th>
-                    <th><p>Fr./Pr.</p></th>
-                    <th><p>Spuštění</p></th>
-                    <th><p>Dokončení</p></th>
-                    <th><p>Poměr S/D</p></th>
-                    <th><p>Opakování</p></th>
-                    <th title="Reset counters"><p>Reset</p></th>
-                </tr>
-                <% sections.forEach((sec, i) => { %>
-                    <tr class="admin-category-row">
-                        <th><%= i + 1 %></th>
-                        <th title="<%= sec.shortDescription %>"><%= sec.name %></th>
-                        <th><%= sec.category %></th>
-                        <th>
-                            <% if (!sec.isPremium) { %>
-                                F
-                            <% } else { %>
-                                P
-                            <% } %>
-                        </th>
-                        <th><%= sec.countStarted %></th>
-                        <th><%= sec.countFinished %></th>
-                        <th><%= sec.SDratio %> %</th>
-                        <th><a href="/admin/<%= sec._id %>/resetCounters" class="btn btn-sm btn-danger"><i class="fas fa-undo-alt"></i></a></th>
-                    </tr>
-                <% }) %>
-            </table>
+                        </div>
+                    </div>
+                </div>
+            <% }) %>
         </div>
     </div>
 </div>
+
 
 <!-- Add category modal -->
 <div class="modal fade" id="modal-category" tabindex="-1">
@@ -106,19 +94,20 @@
             <form action="/category/new" method="POST">
                 <div class="form-group mb-4">
                     <label for="text">Název předmětu</label>
-                    <input class="form-control form-borders" id="text" name="text" rows="1" placeholder="Mezinárodní právo" required></input>
+                    <input class="form-control form-borders" id="text" name="text" rows="1" placeholder="Např. Občanské právo hmotné I." required></input>
                 </div>
-                <div class="form-group mb-4">
-                    <label for="value">Zkratka předmětu</label>
-                    <input class="form-control form-borders" id="value" name="value" rows="1" placeholder="mezinarodnipravo" required></input>
-                </div>
-                <div class="form-group mb-4">
-                    <label for="icon">Ikona předmětu</label>
-                    <input class="form-control form-borders" id="icon" name="icon" rows="1" placeholder="icon_mezinarodko.png" required></input>
-                </div>
-                <div class="form-group">
-                    <label for="orderNum">Pořadí</label>
-                    <input class="form-control form-borders" id="orderNum" name="orderNum" rows="1" placeholder="0" required></input>
+                <label for="text">Ikona předmětu</label>
+                <div class="form-group mb-4 border-grey">
+                    <div class="row p-2 icon-select-container">
+                    <% icons.forEach(function(icon, index) { %>
+                        <div class="col-md-3 icon-container">
+                          <label>
+                            <input type="radio" name="icon" value="<%= icon %>">
+                            <img src="/img/<%= icon %>" alt="Icon <%= index + 1 %>" class="img-thumbnail">
+                          </label>
+                        </div>
+                      <% }); %>
+                    </div>
                 </div>
                 <button class="btn btn-danger mt-4">Vytvořit předmět</button>
             </form>
@@ -139,16 +128,25 @@
             <div class="modal-body mx-3">
                 <form action="/category/edit/<%= category._id %>?_method=PUT" method="POST">
                     <div class="form-group mb-4">
-                        <label for="text">Název kategorie</label>
+                        <label for="text">Název předmětu</label>
                         <input class="form-control form-borders" id="text" name="text" rows="1" value="<%= category.text %>" required></input>
                     </div>
-                    <div class="form-group mb-4">
-                        <label for="icon">Ikona</label>
-                        <input class="form-control form-borders" id="icon" name="icon" rows="1" value="<%= category.icon %>" required></input>
-                    </div>
-                    <div class="form-group">
-                        <label for="orderNum">Pořadí</label>
-                        <input class="form-control form-borders" id="orderNum" name="orderNum" rows="1" value="<%= category.orderNum %>" required></input>
+                    <label for="text">Ikonu předmětu</label>
+                    <div class="form-group mb-4 border-grey">
+                        <div class="row p-2 icon-select-container">
+                        <% icons.forEach(function(icon, index) { %>
+                            <div class="col-md-3 icon-container">
+                              <label>
+                                <% if(icon === category.icon){ %>
+                                    <input type="radio" name="icon" value="<%= icon %>" checked>
+                                <% } else { %>
+                                    <input type="radio" name="icon" value="<%= icon %>">
+                                <% } %>
+                                <img src="/img/<%= icon %>" alt="Icon <%= index + 1 %>" class="img-thumbnail">
+                              </label>
+                            </div>
+                          <% }); %>
+                        </div>
                     </div>
                     <button class="btn btn-danger mt-4">Uložit změny</button>
                 </form>
@@ -157,3 +155,18 @@
         </div>
     </div>
 <% }) %>
+
+<!-- Delete category modal - not allowed info -->
+<div class="modal fade" id="modal-category-delete" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title mx-3">Předmět nelze odstranit</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body mx-3">
+            <p class="text-muted">Předmět nelze odstranit, protože obsahuje balíčky.</p>
+        </div>
+    </div>
+    </div>
+</div>
